# BigInt-Co

./: .gitignore  control_system_analysis.cpp  main.cpp  practical4  prime_checker  readme
L1_Novikov/: README.txt  frequency_response.cpp
PZ_1/: bigint.cpp
PZ_2/: bigint.cpp  main.cpp  prime_checker  readme.  test  test_gmp
PZ_2/inc/: bigint.h
PZ_3/: CMakeLists.txt  bigint.cpp  bigint.h  practical3  primality_tests.cpp  primality_tests.h  readme
PZ_3/src/: primality_tests.cpp
PZ_4/: CMakeLists.txt  bigint.cpp  bigint.h  deterministic_primality.cpp  deterministic_primality.h  main_practical3.cpp  main_practical4.cpp  polynomial.cpp  polynomial.h  practical3  primality_tests.cpp  primality_tests.h  readme  readme.txt
PZ_4/main/: main_practical4.cpp
PZ_4/src/: deterministic_primality.cpp
PZ_5/: BigNumber.c  BigNumber.h  ECPPLite.c  bigint.cpp  bigint.h  main.c  main.cpp
PZ_6/: CMakeLists.txt  README.md  matozh.py
PZ_6/inc/: bigint.h  entropy.h  generate.h  mt19937lab.h
PZ_6/main/: main.cpp
PZ_6/src/: bigint.cpp
RSA/: BigInt.h  Prime.h  RSA.h  ZI_LR2.cpp  cipher.txt  decrypt.txt  p_mid.txt  primegen  q_lit.txt  q_mid.txt  rsa  rsa_program  rsa_test
RSA/gen_primes/: primegen_openssl.cpp  primes.txt  primes_lit.txt
RSA/prime_const/: p.txt  q.txt
